--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
+
+
+
+
     <script src="script.js">
+
+
 
     </script>
 </body>
