--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
 
-
-
-
-    <script src="script.js">
-
-
-
-    </script>
+    <div id="color-palette">
+        <div class='color red'></div>
+        <div class='color yellow'></div>
+        <div class='color blue'></div>
+        <div class='color green'></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
