--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </header>
 
     <div id="color-palette">
-        <div class='color red'></div>
-        <div class='color yellow'></div>
-        <div class='color blue'></div>
-        <div class='color green'></div>
+        <div class='color selected'></div>
+        <div class='color p2'></div>
+        <div class='color p3'></div>
+        <div class='color p4'></div>
     </div>
     <div id="pixel-board">
         <section id="l1">
