tentando fazer botão limpar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div class='color p3'></div>
         <div class='color p4'></div>
     </div>
+    <div>
+        <button id="clear-board" onclick="limpaQuadro()">Limpar</button>
+    </div>
     <div id="pixel-board">
         <section id="l1">
             <div class="pixel"></div>
