--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project pixels art</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Project pixels art</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -14,12 +15,12 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
 
-    <div id="color-palette">
-        <div class='color selected'></div>
-        <div class='color p2'></div>
-        <div class='color p3'></div>
-        <div class='color p4'></div>
-    </div>
+    <section id="color-palette">
+        <div id="p1" class="color selected"></div>
+        <div id="p2" class="color"></div>
+        <div id="p3" class="color"></div>
+        <div id="p4" class="color"></div>
+    </section>
     <div>
         <button id="clear-board" onclick="limpaQuadro()">Limpar</button>
     </div>
@@ -60,6 +61,5 @@
             <div class="pixel"></div>
         </section>
     </div>
-    <script src="script.js></script>
 </body>
 </html>
