--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     </header>
 
     <section id="color-palette">
-        <div id="p1" class="color selected"></div>
-        <div id="p2" class="color"></div>
-        <div id="p3" class="color"></div>
-        <div id="p4" class="color"></div>
+        <div id="p1" class="color selected">Preto</div>
+        <div id="p2" class="color">Amarelo</div>
+        <div id="p3" class="color">Azul</div>
+        <div id="p4" class="color">Verde</div>
     </section>
     <div>
         <button id="clear-board" onclick="limpaQuadro()">Limpar</button>
     </div>
     <div id="pixel-board">
-        <section id="l1">
+        <!-- <section id="l1">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
@@ -59,7 +59,7 @@
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
-        </section>
+        </section> -->
     </div>
 </body>
 </html>
