voltando outra configuração

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="clear-board" onclick="limpaQuadro()">Limpar</button>
     </div>
     <div id="pixel-board">
-        <!-- <section id="l1">
+        <section id="l1">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
@@ -59,7 +59,7 @@
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
-        </section> -->
+        </section>
     </div>
 </body>
 </html>
