--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="p4" class="color">Verde</div>
     </section>
     <div>
-        <button id="clear-board" onclick="limpaQuadro()">Limpar</button>
+        <button id="clear-board" onclick="limpaTela()">Limpar</button>
     </div>
     <div id="pixel-board">
         <section id="l1">
